# homelab-pipelines

./: .dockerignore  .gitignore  Dockerfile  README.md  dagster.yaml  pyproject.toml
src/homelab_pipelines/: definitions.py  settings.py
src/homelab_pipelines/defs/: prices.py  schedules.py  static_data.py
src/homelab_pipelines/defs/data/: bybit_symbols.csv  symbols.csv
src/homelab_pipelines/entrypoints/dev/: bybit_price_for_one_symbol.py
src/homelab_pipelines/notebooks/: combine_local_dagster_partitions.ipynb  generate_bybit_symbols.ipynb  inspect_output.ipynb  model_hmm.ipynb  model_hmm_xgboost.ipynb
src/homelab_pipelines/resources/: bybit.py
src/homelab_pipelines/utils/: datetime.py  errors.py  flatten_dict.py  paths.py  polars.py
tests/homelab_pipelines/resources/: bybit.py
tests/homelab_pipelines/utils/: test_datetime.py  test_flatten_dict.py
