[project]
name = "homelab_pipelines"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.12.6",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "homelab_pipelines"
registry_modules = [
    "homelab_pipelines.components.*",
]


