[project]
name = "homelab_pipelines"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.12.6",
    "dagster-polars>=0.27.8",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ulid>=1.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.14.9",
    "inline-snapshot>=0.31.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "homelab_pipelines"
registry_modules = [
    "homelab_pipelines.components.*",
]


